Updated project file and storyboard interface

--- a/XYZInfo/Base.lproj/Main.storyboard
+++ b/XYZInfo/Base.lproj/Main.storyboard
@@ -55,6 +55,8 @@
                     <connections>
                         <outlet property="Password" destination="Lzl-j2-5sm" id="Ck8-y3-VrE"/>
                         <outlet property="Username" destination="yo1-ho-Czt" id="vvW-yk-MNN"/>
+                        <outlet property="password" destination="Lzl-j2-5sm" id="aBA-yD-hAd"/>
+                        <outlet property="username" destination="yo1-ho-Czt" id="Tay-Wk-vJh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -70,7 +72,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Hnn-Q8-uF0">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cell" id="Hnn-Q8-uF0">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Hnn-Q8-uF0" id="ha7-a1-4Fu">
@@ -142,7 +144,7 @@
                                 <rect key="frame" x="42" y="157" width="237" height="30"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" textContentType="password"/>
+                                <textInputTraits key="textInputTraits" keyboardType="numberPad" textContentType="password"/>
                             </textField>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
