refactor code and UI

--- a/XYZInfo/Base.lproj/Main.storyboard
+++ b/XYZInfo/Base.lproj/Main.storyboard
@@ -150,7 +150,7 @@
                                 <state key="normal" title="Submit"/>
                                 <connections>
                                     <action selector="Logon:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rKb-JN-5Tw"/>
-                                    <action selector="onSubmit:" destination="qfc-kP-sIy" eventType="touchUpInside" id="Gze-iQ-c1M"/>
+                                    <action selector="onSubmit:" destination="qfc-kP-sIy" eventType="touchUpInside" id="oyh-kG-zyZ"/>
                                 </connections>
                             </button>
                         </subviews>
